Fixed broken search-bar layout.
Layout broke due to change in tag of container element (div -> form).

--- a/styles.css
+++ b/styles.css
@@ -76,7 +76,7 @@ body {
     padding: 0 4rem;
 }
 
-.header > div {
+.header > * {
     display: flex;
     align-items: center;
     padding-bottom: 1rem;
